--- a/pardizaineri.html
+++ b/pardizaineri.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Centered Layout</title>
+  <title>Par Dizaineri</title>
   <link href="https://fonts.googleapis.com/css2?family=Katibeh&display=swap" rel="stylesheet" />
   <style>
     body, html {
@@ -60,6 +60,27 @@
       margin-bottom: 40px;
       font-family: 'Katibeh', cursive;
     }
+    
+    .back-button {
+      margin-top: 10px;
+    }
+
+    .back-button a {
+      display: inline-block;
+      padding: 6px 12px;
+      background-color: #ffffff;
+      color: #253439;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      font-size: 0.85rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .back-button a:hover {
+      background-color: #ffffff;
+    }
+  
 
     @media (max-width: 375px) {
       #logo-img {
@@ -74,7 +95,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="image.png" alt="Mesle logo" id="logo-img" />
+      <img src="image1.png" alt="Mesle logo" id="logo-img" />
     </header>
 
     <div class="title-link">Par Dizaineri</div>
@@ -82,6 +103,9 @@
     <div class="content-area">
       <p>Dizaineres vārds ir Katrīna Mesle, un viņai ir 16 gadi. Viņa iet Siguldas Pilsētas Vidusskolas 10. klasē. Viņa ir absolvējusi mākslas skolu "Baltais Flīģelis". Brīvajā laikā viņa nodarbojas ar mākslu. Viņa ir radoša un aizrautīga māksliniece ar interesi par vizuālo mākslu, krāsu saskaņošanu un kompozīciju. Zīmējot un gleznojot jau vairākus gadus, māksla viņai ir veids, kā izpaust emocijas, domas un stāvokļus.</p>
     </div>
+  </div>
+  <div class="back-button">
+    <a href="index.html">⬅ Sākumlapu</a>
   </div>
 </body>
 </html>
