--- a/parlogo.html
+++ b/parlogo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Centered Layout</title>
+  <title>Par Logo</title>
   <link href="https://fonts.googleapis.com/css2?family=Katibeh&display=swap" rel="stylesheet" />
   <style>
     body, html {
@@ -60,6 +60,25 @@
       margin-bottom: 40px;
       font-family: 'Katibeh', cursive;
     }
+    .back-button {
+      margin-top: 10px;
+    }
+
+    .back-button a {
+      display: inline-block;
+      padding: 6px 12px;
+      background-color: #ffffff;
+      color: #253439;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      font-size: 0.85rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .back-button a:hover {
+      background-color: #ffffff;
+    }
 
     @media (max-width: 375px) {
       #logo-img {
@@ -74,7 +93,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="image.png" alt="Mesle logo" id="logo-img" />
+      <img src="image1.png" alt="Mesle logo" id="logo-img" />
     </header>
 
     <div class="title-link">Par Logo</div>
@@ -82,6 +101,9 @@
     <div class="content-area">
       <p>Logotips “Mesle” izceļas ar elegantu un romantisku dizainu. Florālie, mežģīnēm līdzīgie ornamenti piešķir tam sievišķīgu un izsmalcinātu noskaņu, savukārt rokraksta stila burti rada personisku un radošu iespaidu. Krāsu gamma ir atturīga un klasiska, kas norāda uz kvalitāti un gaumīgu stilu. Tas lieliski piestāv zīmolam, kas saistīts ar modi, tekstilu vai rokdarbiem.</p>
     </div>
+  </div>
+  <div class="back-button">
+    <a href="index.html">⬅ Sākumlapu</a>
   </div>
 </body>
 </html>
